# cnn-vae-2

./: .gitignore  Makefile  README.md  api_service.py  cnn-vae  config.py  prompt_bank.py  pyproject.toml  requirements.txt  setup.py  train_eval.py
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  api_service.py  conv_vae.py  data_hf.py  pyproject.toml  requirements.txt  setup.py  train_eval.py
web/: README.md  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/generate/: route.ts
